--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,21 @@
 spring.application.name=spring-docs-render
 
 app.enable.incoming.log=false
+
+
+spring.jfr.instrumentation.beans-creation.enabled=true
+spring.jfr.instrumentation.bean-definitions.enabled=true
+spring.jfr.instrumentation.scheduler.enabled=true
+spring.jfr.instrumentation.pool-jdbc.enabled=true
+spring.jfr.instrumentation.kafka.enabled=true
+
+# tracing
+spring.jfr.instrumentation.controller.enabled=true
+spring.jfr.instrumentation.controller.filters=com.github.sibmaks.springdocsrender.*
+spring.jfr.instrumentation.rest-controller.enabled=true
+spring.jfr.instrumentation.rest-controller.filters=com.github.sibmaks.springdocsrender.*
+spring.jfr.instrumentation.service.enabled=true
+spring.jfr.instrumentation.service.filters=com.github.sibmaks.springdocsrender.*
+spring.jfr.instrumentation.jpa-repository.enabled=true
+spring.jfr.instrumentation.component.enabled=true
+spring.jfr.instrumentation.component.filters=com.github.sibmaks.springdocsrender.*
