--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=spring-docs-render
 
-app.enable.incoming.log=false
-
 
 spring.jfr.instrumentation.beans-creation.enabled=true
 spring.jfr.instrumentation.bean-definitions.enabled=true
@@ -19,3 +17,17 @@ spring.jfr.instrumentation.service.filters=com.github.sibmaks.springdocsrender.*
 spring.jfr.instrumentation.jpa-repository.enabled=true
 spring.jfr.instrumentation.component.enabled=true
 spring.jfr.instrumentation.component.filters=com.github.sibmaks.springdocsrender.*
+
+# Общие настройки DataSource
+spring.datasource.url=jdbc:postgresql://localhost:5432/sandbox
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Настройки Hibernate/JPA
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+app.enable.incoming.log=false
